# oneDNN

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  ir_dump.cpp
apps/config/: config.json  conv.json  dg2-512.json  hardware.json
apps/insights/: insights.md
apps/mock/: mock_device_info_t.hpp  mock_engine.hpp  mock_engine_t.hpp
apps/outputs/: dg2-512_conv1x1_1024.txt  dg2-512_conv3x3_1024.txt  dg2-512_conv3x3_1080p.txt  dg2-512_conv3x3_4096.txt  dg2-512_conv3x3_512.txt  dg2-512_conv3x3_64.txt
cmake/: options.cmake
include/oneapi/dnnl/: dnnl.hpp
src/gpu/compute/: device_info.hpp
src/gpu/jit/conv/: ir_core.hpp  utils.hpp
